objects/AIA_RxMandate__c.object
<CustomObject>
    <fields>
        <fullName>BDPName__c</fullName>
        <description>The name of the Benefit Design Product</description>
        <formula>Benefit_Design_Product__r.Name + ' - ' + Benefit_Design_Product__r.Product_Parent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDPName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_ID__c</fullName>
        <formula>CASESAFEID(Proposed_Products__r.Benefit_Request_Form__c)</formula>
        <label>BRF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Product</label>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipLabel>AIA RxMandates</relationshipLabel>
        <relationshipName>AIA_RxMandates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mandate_Apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandate Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mandate_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandate_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mandate_Jurisdiction__c</fullName>
        <label>Mandate Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandate_Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_Rules_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Rules AliasName</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPName__c</fullName>
        <description>The name of the Proposed Product this benefit belongs to.</description>
        <formula>Proposed_Products__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>The product category</description>
        <formula>TEXT(Benefit_Design_Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The product category</inlineHelpText>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Products</label>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipLabel>AIA RxMandates</relationshipLabel>
        <relationshipName>AIA_RxMandates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AIA RxMandate</label>
    <nameField>
        <displayFormat>RxMandate-{000000}</displayFormat>
        <label>AIA RxMandate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AIA RxMandates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>Network_Rules</fullName>
        <active>true</active>
        <label>Network Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plan_Rx_Mandate</fullName>
        <active>true</active>
        <label>Plan Rx Mandate</label>
    </recordTypes>
</CustomObject>